# DPP-UE-CodeGen

./: .gitignore  CMakeLists.txt  README.md  updatedpp.sh
.github/workflows/: updateinclude.yml
gencode/: appcommand.h  application.h  auditlog.h  automod.h  ban.h  channel.h  cluster.h  colors.h  discordclient.h  dispatcher.h  dtemplate.h  emoji.h  entitlement.h  etf.h  guild.h  integration.h  intents.h  invite.h  message.h  misc-enum.h  permissions.h  presence.h  prune.h  role.h  scheduled_event.h  sku.h  snowflake.h  sslclient.h  stage_instance.h  unicode_emoji.h  user.h  voiceregion.h  voicestate.h  webhook.h
include/dpp/: webhook.h
src/: main.cpp  main.h
